crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__unquoted_attribute_value_containing_apos1.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<foo a=b'c>\"####)"
---
[
    Token {
        data: "foo",
        attrs: Some(
            {
                "a": Some(
                    (
                        "b'c",
                        Unquoted,
                    ),
                ),
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "foo",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
