crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__uppercase_end_tag_name.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"</X>\"####)"
---
[]
