crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__zero_hyphen_prefixed_hex_numeric_entity.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"&#x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000041;\"####)"
---
[
    Token {
        data: "A",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
